--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="mainstyles.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
-
+      <canvas id="pizzaChart" width="400" height="400"></canvas>
   </body>
 
   <script type="text/javascript" src="dependencies/jquery-2.1.4.min.js"></script>
