--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="top-menu-area">
-        <div id="logo-area"><img id="logo-image"src="images/logo.png" /></div>
+        <div id="logo-area"><a href="#"><img id="logo-image" src="images/logo.png" /></a></div>
     </div>
 
     <!-- I used a pizza-chart-container so I can slide the whole thing up
@@ -18,7 +18,10 @@
     </div>
 
     <!-- TODO: How are we displaying the list of results? -->
-    <div id="results-area">Results List (3): <br />bla<br/>bla<br/>bla</div>
+    <div id="results-area">
+        <span id="results-area-title"></span>
+        <br />bla<br/>bla<br/>bla
+    </div>
     
     <script type="text/javascript" src="dependencies/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="dependencies/bootstrap.min.js"></script>
