--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
     <!-- TODO: How are we displaying the list of results? -->
     <div id="results-area">
         <span id="results-area-title"></span>
+        <center>
         <table id="simpleTable">
           <thead>
               <tr>
@@ -29,7 +30,7 @@
               <th data-sort="string">Name</th>
               </tr>
           </thead>
-          <tbody>
+          <tbody id="simpleTableBody">
             <tr>
               <td>T</td><td>***</td><td>££</td><td>Golden Wok</td>
             </tr>
@@ -41,6 +42,7 @@
             </tr>
           </tbody>
         </table>
+      </center>
     </div>
 
     <script type="text/javascript" src="dependencies/jquery-2.1.4.min.js"></script>
