rearranged dependencies to fix bootstrap font error

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pizza Picker</title>
-    <link rel="stylesheet" href="dependencies/bootstrap.min.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="dependencies/css/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="mainstyles.css" media="screen" charset="utf-8">
 </head>
 <body>
@@ -45,10 +45,10 @@
       </center>
     </div>
 
-    <script type="text/javascript" src="dependencies/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="dependencies/bootstrap.min.js"></script>
-    <script type="text/javascript" src="dependencies/Chart.min.js"></script>
-    <script type="text/javascript" src="dependencies/stupidtable.min.js"></script>
+    <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="dependencies/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="dependencies/js/Chart.min.js"></script>
+    <script type="text/javascript" src="dependencies/js/stupidtable.min.js"></script>
     <script type="text/javascript" src="mainscript.js"></script>
 </body>
 </html>
