Fixed a bug where the logo didn't reset the search

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="top-menu-area">
-        <span id="header" style="display:inline;"><a href="#"><img id="logo-image" src="images/logo.png" /></a></span>     
+        <span id="header" style="display:inline;"><a id="logo-image-link"href="#"><img id="logo-image" src="images/logo.png" /></a></span>     
       	<div class="postcode" >
       			<input id="search" id="search" placeholder="Postcode...">
       			<button class="glyphicon glyphicon-search"></button>
