--- a/main.html
+++ b/main.html
@@ -19,9 +19,13 @@
 		</div>
 
 		<div id="breadcrumbs-area">
-		test
+				<ul>
+						<li><a href="#">Breadcrumb</a></li>
+						<li><a href="#">b</a></li>
+				</ul>
+				
 		</div>
-
+		<br><br>
     <!-- I used a pizza-chart-container so I can slide the whole thing up
         when it needs to dissapear. -->
     <div id="pizza-chart-container">
