--- a/main.html
+++ b/main.html
@@ -11,9 +11,10 @@
     <div id="top-menu-area">
         <span id="header" style="display:inline;"><a id="logo-image-link"href="#"><img id="logo-image" src="images/logo.png" /></a></span>     
       	<div class="postcode" >
-      			<input class="search" id="search" id="search" placeholder="Postcode..." >
+      			<input class="search" id="search" placeholder="Specific postcode..." >
       			<button class="glyphicon glyphicon-search" style="color:#99ff99;" ></button>
-      			<input class="distance" type="distance" placeholder="Distance..." />
+
+      			<input class="distance" id="distance" placeholder="Distance..." />
       			<button class="glyphicon glyphicon-arrow-right" style="color:#99ff99;"></button>
       	</div>
 		</div>
