Breadcrumbs are clickable: they return the user to a previous point

--- a/main.html
+++ b/main.html
@@ -21,15 +21,13 @@
 
 		<div id="breadcrumbs-area">
 				<ul>
-						<li><a href="#">Breadcrumb</a></li>
-						<li><a href="#">b</a></li>
 				</ul>
 				
 		</div>
 		<br><br>
     <!-- I used a pizza-chart-container so I can slide the whole thing up
         when it needs to dissapear. -->
-    <div id="breadcrumbs-area" align="center">Choices : </div>
+    <div id="breadcrumbs-area" align="center"></div>
     <div id="pizza-chart-container" align="center">
         <canvas id="pizza-chart" ></canvas>
     </div>
