--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
     <!-- TODO: How are we displaying the list of results? -->
       <div class="row">
         <div id="results-area" class="col-xs-12 col-md-8 col-md-offset-2 col-xl-6 col-md-offset-3">
-            <span id="results-area-title"></span>
+            <span id="results-area-title" class="text-muted"></span>
             <table id="results-table" class="table table-hover table-bordered">
               <thead>
                   <tr id="results-table-header">
