--- a/main.html
+++ b/main.html
@@ -11,19 +11,19 @@
 <body>
     <div id="nav-bar">
         <img id="logo-image" src="images/logo.png"/>
-      	<div class="postcode" >
-      			<input class="form-control" id="search" placeholder="Specific postcode..." >
-      			<input class="form-control" id="distance" value="10" placeholder="Distance..."/>
-                <span id="distance-units">miles</span>
-      			<button id="postcode-search" class="glyphicon glyphicon-arrow-right" style="color:#99ff99;"></button>
-      	</div>
 		</div>
 
     <div class="jumbotron">
-
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p></p>
+        <div class="row">
+          <div class="col-xs-10 col-xs-1 col-md-8 col-md-2">
+          	<div class="postcode">
+          			<input class="form-control" id="search" placeholder="Specific postcode..." >
+          			<input class="form-control" id="distance" value="10" placeholder="Distance..."/>
+          			<button id="postcode-search" class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></button>
+          	</div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -36,20 +36,24 @@
     <div class="container">
     <!-- I used a pizza-chart-container so I can slide the whole thing up
         when it needs to dissapear. -->
-    <div class="row">
-      <div class="col-xs-12 col-md-10 col-md-offset-1 col-xl-6 col-md-offset-3">
-        <div id="breadcrumbs-area" align="center"></div>
+      <div class="row">
+        <div class="col-xs-12 col-md-10 col-md-offset-1 col-xl-6 col-md-offset-3">
+          <div id="breadcrumbs-area" align="center"></div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div id="pizza-chart-container" class="col-xs-12 col-md-8 col-md-offset-2 col-xl-6 col-md-offset-3">
-            <canvas id="pizza-chart"></canvas>
+
+      <div class="row">
+        <div id="pizza-chart-container" class="col-xs-12 col-md-8 col-md-offset-2 col-xl-6 col-md-offset-3">
+              <canvas id="pizza-chart"></canvas>
+        </div>
       </div>
-    </div>
+
+      <br>
+      <br>
     <!-- TODO: How are we displaying the list of results? -->
       <div class="row">
         <div id="results-area" class="col-xs-12 col-md-8 col-md-offset-2 col-xl-6 col-md-offset-3">
-            <span id="results-area-title" class="text-muted"></span>
+            <p id="results-area-title" class="text-muted"></p>
             <table id="results-table" class="table table-hover table-bordered">
               <thead>
                   <tr id="results-table-header">
