--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pizza Picker</title>
     <link rel="stylesheet" href="dependencies/css/bootstrap.min.css" media="screen" charset="utf-8">
+    <link href="https://raw.githack.com/seiyria/bootstrap-slider/master/css/bootstrap-slider.css" rel="stylesheet" />
     <link rel="stylesheet" href="mainstyles.css" media="screen" charset="utf-8">
     <link rel="shortcut icon" href="images/Screenshot.ico"> <!-- need to update to have transparent background--><script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
 </head>
@@ -16,11 +17,13 @@
     <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-xs-1 col-md-8 col-md-2">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-sm-offset-3 col-lg-4 col-sm-offset-4">
           	<div class="postcode">
-          			<input class="form-control" id="search" placeholder="Specific postcode..." >
-          			<input class="form-control" id="distance" value="10" placeholder="Distance..."/>
-          			<button id="postcode-search" class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></button>
+          			<input class="form-control" id="search" placeholder="Postcode" >
+          			<input class="form-control" id="distance" value="10" placeholder="Distance (miles)"/>
+                <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
+                <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" />
+          			<button id="postcode-search" class="btn btn-lg btn-default">Find Restaurants <span class="glyphicon glyphicon-arrow-right"></span></button>
           	</div>
           </div>
         </div>
@@ -74,7 +77,9 @@
     </div>
 
     <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/js/bootstrap.min.js"></script>
+    <script src="https://raw.githack.com/seiyria/bootstrap-slider/master/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="dependencies/js/Chart.min.js"></script>
     <script type="text/javascript" src="dependencies/js/stupidtable.min.js"></script>
     <script type="text/javascript" src="mainscript.js"></script>
