--- a/main.html
+++ b/main.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="dependencies/css/bootstrap.min.css" media="screen" charset="utf-8">
     <link href="https://raw.githack.com/seiyria/bootstrap-slider/master/css/bootstrap-slider.css" rel="stylesheet" />
     <link rel="stylesheet" href="mainstyles.css" media="screen" charset="utf-8">
-    <link rel="shortcut icon" href="images/Screenshot.ico"> <!-- need to update to have transparent background--><script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <link rel="shortcut icon" href="images/Screenshot.ico">
 </head>
 <body>
-    <div id="nav-bar">
-        <img id="logo-image" src="images/logo.png"/>
-		</div>
+    <!--div id="nav-bar">
+        <img id="logo-image" src="images/logoinv.png"/>
+		</div-->
 
     <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-sm-offset-3 col-lg-4 col-sm-offset-4">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+            <img id="logo-image" class="img-responsive" src="images/logoinv.png"/>
           	<div class="postcode">
           			<input class="form-control" id="search" placeholder="Postcode" >
-          			<input class="form-control" id="distance" value="10" placeholder="Distance (miles)"/>
-                <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
-                <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" />
+                <div class="">
+                  <span class="badge" id="distance-hint">Distance:</span> &nbsp;
+                  <input id="distance" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="20" data-slider-step="1" data-slider-value="3" >
+                </div>
           			<button id="postcode-search" class="btn btn-lg btn-default">Find Restaurants <span class="glyphicon glyphicon-arrow-right"></span></button>
           	</div>
           </div>
