changed the glyph inside the postcode button, but it's mostly personal preference

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
                   <span class="badge" id="distance-hint">Distance:</span> &nbsp;
                   <input id="distance" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="20" data-slider-step="1" data-slider-value="3" >
                 </div>
-          			<button id="postcode-search" class="btn btn-lg btn-default">Find Restaurants <span class="glyphicon glyphicon-arrow-right"></span></button>
+          			<button id="postcode-search" class="btn btn-lg btn-default">Find Restaurants <span class="glyphicon glyphicon-share-alt"></span></button>
           	</div>
           </div>
         </div>
