cleaned up some html, and css(mainly making sure everything is centered properly)

--- a/main.html
+++ b/main.html
@@ -44,17 +44,14 @@
         		</ol>
           </center>
         </div>
-  		  <br><br>
+  		  
       <!-- I used a pizza-chart-container so I can slide the whole thing up
           when it needs to dissapear. -->
-        <div class="row">
-          <div class="col-xs-12 col-md-10 col-md-offset-1 col-xl-6 col-md-offset-3">
-            <div id="breadcrumbs-area" align="center"></div>
-          </div>
-        </div>
+
+	
 
         <div class="row">
-          <div id="pizza-chart-container" class="col-xs-12 col-md-8 col-md-offset-2 col-xl-6 col-md-offset-3">
+          <div id="pizza-chart-container">
                 <canvas id="pizza-chart"></canvas>
           </div>
         </div>
