cleaned up some html, and css(mainly making sure everything is centered properly)

--- a/main.html
+++ b/main.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="mainstyles.css" media="screen" charset="utf-8">
     <link rel="shortcut icon" href="images/Screenshot.ico">
 </head>
-<body>
-    <!--div id="nav-bar">
-        <img id="logo-image" src="images/logoinv.png"/>
-		</div-->
+<body style="background-color : #EBEBEB;">
 
     <div class="jumbotron">
       <div class="container">
@@ -40,7 +37,7 @@
 
         <div class="row">
           <center>
-        		<ol id="breadcrumbs-area" class="breadcrumb">
+        		<ol id="breadcrumbs-area" class="breadcrumb" style="background-color : #EBEBEB;">
         		</ol>
           </center>
         </div>
@@ -72,9 +69,6 @@
                     </tr>
                 </thead>
                 <tbody id="results-table-body">
-                  <tr>
-                    <td>T</td><td>***</td><td>££</td><td>Golden Wok</td>
-                  </tr>
                 </tbody>
               </table>
           </div>
