anged header size and breadcrumbs white space now gone

--- a/main.html
+++ b/main.html
@@ -18,7 +18,9 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <img id="logo-image" class="img-responsive" src="images/logoinv.png"/>
+          <span2>
+            <img id="logo-image" class="img-responsive" src="images/logoinv.png"/></span2>
+            <span2>
           	<div class="postcode">
           			<input class="form-control" id="search" placeholder="Postcode" >
                 <div class="">
@@ -29,6 +31,7 @@
           	</div>
           </div>
         </div>
+          			</span2>
       </div>
     </div>
 
