--- a/main.html
+++ b/main.html
@@ -15,9 +15,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-          <span2>
-            <img id="logo-image" class="img-responsive" src="images/logoinv.png"/></span2>
-            <span2>
+            <img id="logo-image" class="img-responsive" src="images/logoinv.png"/>
           	<div class="postcode">
           			<input class="form-control" id="search" placeholder="Postcode" >
                 <div class="">
@@ -28,7 +26,6 @@
           	</div>
           </div>
         </div>
-          			</span2>
       </div>
     </div>
 
