fixed minor pie offset

--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
         when it needs to dissapear. -->
 
       <div class="row">
-        <div id="pizza-chart-container" class="col-xs-12">
+        <div id="pizza-chart-container">
               <canvas id="pizza-chart"></canvas>
         </div>
       </div>
