--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+          <div class="col-xs-12 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-2">
             <center>
             <img id="logo-image" class="img-responsive" src="images/logoinv.png"/>
           </center>
           </div>
-          <div class="col-xs-10 col-xs-offset-1 col-sm-4">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
           	<div class="postcode">
           			<input class="form-control" id="search" placeholder="Postcode" >
                 <div class="">
