changed the distance to actually work and take in the postcode

--- a/main.html
+++ b/main.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="images/Screenshot.ico">
 </head>
 <body style="background-color : #EBEBEB;">
-
     <div class="jumbotron">
       <div class="container">
         <div class="row">
@@ -18,6 +17,7 @@
             <img id="logo-image" class="img-responsive" src="images/logoinv.png"/>
           	<div class="postcode">
           			<input class="form-control" id="search" placeholder="Postcode" >
+          			<span class="glyphicon glyphicon-alert" id="alert" style="color:red"></span>
                 <div class="">
                   <span class="badge" id="distance-hint">Distance:</span> &nbsp;
                   <input id="distance" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="20" data-slider-step="1" data-slider-value="3" >
