--- a/main.html
+++ b/main.html
@@ -55,8 +55,10 @@
         when it needs to dissapear. -->
 
       <div class="row">
-        <div id="pizza-chart-container">
-              <canvas id="pizza-chart"></canvas>
+        <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+          <div id="pizza-chart-container">
+                <canvas id="pizza-chart"></canvas>
+          </div>
         </div>
       </div>
 
