--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -8,7 +8,10 @@
 
 </head>
     <body>
-        <div id="map"></div>
+		<div id="info" class="">
+			<div class="description-box">testt</div>
+		</div>
+		<div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script type="text/javascript" src="restaurant_page.js"></script>
     </body>
