--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div id="postcode-container" class="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-2">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-2">
             <center>
             <img id="logo-image" class="img-responsive" src="images/logoinv.png"/>
           </center>
@@ -27,7 +27,7 @@
           			<span class="glyphicon glyphicon-flag" id="alert" data-toggle="tooltip" title="Woops, we can't find your postcode."></span>
                 <div class="">
                   <span class="badge" id="distance-hint">Distance:</span> &nbsp;
-                  <input id="distance" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="20" data-slider-step="1" data-slider-value="3" >
+                  <input id="distance" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="40" data-slider-step="1" data-slider-value="3" >
                 </div>
           			<button id="postcode-search" class="btn btn-lg btn-default">Find Restaurants <span class="glyphicon glyphicon-share-alt"></span></button>
           	</div>
