--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Restaurant Page</title>
-    <link rel="stylesheet" href="dependencies/bootstrap.min.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="dependencies/css/bootstrap.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="restaurant_page.css" media="screen" charset="utf-8">
 
 </head>
