Changed to read data from CSV.

--- a/main.html
+++ b/main.html
@@ -84,6 +84,7 @@
 
     </div>
 
+    
     <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="dependencies/js/d3.v3.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
@@ -91,6 +92,7 @@
     <script src="https://raw.githack.com/seiyria/bootstrap-slider/master/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="dependencies/js/Chart.min.js"></script>
     <script type="text/javascript" src="dependencies/js/stupidtable.min.js"></script>
+    <script type="text/javascript" src="dependencies/js/jquery-csv.js"></script>
     <script type="text/javascript" src="mainscript.js"></script>
     <script type="text/javascript" src="d3tasks.js"></script>
     <script type="text/javascript" src="experiment.js"></script>
