--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -13,7 +13,7 @@
 		<div id="description-box"></div>
 		<div id="price"></div>
 		<div id="stars"></div>
-		<div id="tags
+		<div id="tags"></div>
 		</div>
 		<div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
