--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
           <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
           	<div class="postcode">
           			<input class="form-control" id="search" placeholder="Postcode" >
-          			<span class="glyphicon glyphicon-flag" id="alert" data-toggle="tooltip" title="Woops, we can't find your postcode."></span>
+          			<span class="glyphicon glyphicon-flag" id="alert" data-toggle="tooltip" data-placement="right" title="Woops, we can't find your postcode."></span>
                 <div class="">
                   <span class="badge" id="distance-hint">Distance:</span> &nbsp;
                   <input id="distance" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="40" data-slider-step="1" data-slider-value="3" >
@@ -86,7 +86,7 @@
 
     </div>
 
-    
+
     <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="dependencies/js/d3.v3.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
