--- a/main.html
+++ b/main.html
@@ -89,9 +89,9 @@
 
     <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="dependencies/js/d3.v3.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="dependencies/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/js/bootstrap.min.js"></script>
-    <script src="https://raw.githack.com/seiyria/bootstrap-slider/master/js/bootstrap-slider.js"></script>
+    <script src="dependencies/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="dependencies/js/Chart.min.js"></script>
     <script type="text/javascript" src="dependencies/js/stupidtable.min.js"></script>
     <script type="text/javascript" src="dependencies/js/jquery-csv.js"></script>
