added a picture position on the restaurant page

--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -8,12 +8,15 @@
 
 </head>
     <body>
+		
 		<div id="info" class="">
+		<div style="background-image: url('images/segments/pizza.jpg'); height: 350px; opacity: 0.6; background-position: center;"></div>
 		<div id="restaurant-name"></div>
 		<div id="description-box"></div>
 		<div id="price"></div>
 		<div id="stars"></div>
 		<div id="tags"></div>
+		
 		</div>
 		<div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
