--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -10,7 +10,7 @@
     <body>
 		
 		<div id="info" class="">
-		<div style="background-image: url('images/segments/pizza.jpg'); height: 350px; opacity: 0.6; background-position: center;"></div>
+		<div id="image"></div>
 		<div id="restaurant-name"></div>
 		<div id="description-box"></div>
 		<div id="price"></div>
@@ -21,5 +21,6 @@
 		<div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script type="text/javascript" src="restaurant_page.js"></script>
+	<script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
     </body>
 </html>
