map working with new data

--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -18,5 +18,7 @@
 		<div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script type="text/javascript" src="restaurant_page.js"></script>
+        <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="dependencies/js/jquery-csv.js"></script>
     </body>
 </html>
