--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -20,6 +20,7 @@
 		</div>
 		<div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script type="text/javascript" src="restaurant_data.js"></script>
         <script type="text/javascript" src="restaurant_page.js"></script>
         <script type="text/javascript" src="dependencies/js/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="dependencies/js/jquery-csv.js"></script>
