--- a/main.html
+++ b/main.html
@@ -95,6 +95,7 @@
     <script type="text/javascript" src="dependencies/js/Chart.min.js"></script>
     <script type="text/javascript" src="dependencies/js/stupidtable.min.js"></script>
     <script type="text/javascript" src="dependencies/js/jquery-csv.js"></script>
+    <script type="text/javascript" src="restaurant_data.js"></script>
     <script type="text/javascript" src="mainscript.js"></script>
     <script type="text/javascript" src="d3tasks.js"></script>
     <script type="text/javascript" src="experiment.js"></script>
