added a logo to the restaurant page

--- a/restaurant_page.html
+++ b/restaurant_page.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="restaurant_page.css" media="screen" charset="utf-8">
 
 </head>
-    <body>
+    <body>	
+		
 		
 		<div id="info" class="">
-		<div id="image"></div>
+		<a href="main.html"><img id="logo-image" src="images/logoinv.png"/></a>
+			<div id="image"></div>
 		<div id="restaurant-name"></div>
 		<div id="description-box"></div>
 		<div id="price"></div>
